style colors adjustments.

--- a/Index.html
+++ b/Index.html
@@ -23,7 +23,7 @@
 </head>
 <body>
     <!-- Header links-->
-    <header >
+    <header class="head">
         <section class="div-nav">
             <nav>
                 <ul class="list-nav">
@@ -101,7 +101,7 @@
                 <i class="fa-solid fa-quote-right fa-5x"></i>
                 <blockquote cite="#" >
                     <p class="description-of-section">
-                        Fake it until you make it.
+                        404 Oops! this is akward.
                     </p>
                 </blockquote>
                 <h2 class="title-section someone">Internet</h2>
