Styles colors adjustments.

--- a/Index.html
+++ b/Index.html
@@ -229,7 +229,7 @@
                                 </article>
                             </section>
                         </section>
-                        <article>
+                        <article class="message-button">
                            <!--form for the section contact-->
                             <article>                
                                 <form method="post" action="mailto:mj.garcest@gmail.com">
