--- a/Index.html
+++ b/Index.html
@@ -9,15 +9,11 @@
     <!--icons-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
     <!--CSS-->
-    <link rel="stylesheet" href="./styles/portafolio.css">
+    <link rel="stylesheet" href="./styles/styles.css">
     <!--Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Josefin+Slab:wght@100;200;300;400;500&family=Noto+Sans+JP:wght@100;300&family=Poiret+One&display=swap" rel="stylesheet">
-	<script src="https://kit.fontawesome.com/62382c27a3.js" crossorigin="anonymous"></script>
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&family=Roboto:wght@300;400;500;700;900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fragment+Mono:ital@0;1&display=swap" rel="stylesheet">
 		<!--tab icon-->
 	<link rel="icon" href="./images/undraw_cat_px71.svg">
 </head>
@@ -49,13 +45,13 @@
         <section id="about" class="presentation">
             <article class="presentation-container">
                 <article class="presentation-text">
-                    <h1 class="greetings">HI, I'M</h1>
+                    <p class="greetings">¡HOLA! SOY</p>
 										<h1 class="nickname">MAJO JOJO</h1>
-                    <p>Bienvenido a mi territorio de creatividad, desarrollo web y diseño</p>
+                    <p class="greetings-description">Desarrolladora web</p>
                     <a href="#projects" class="what-i-do">LO QUE HAGO</a>
                 </article> 
                 <figure class="presentation-image">
-                    <img src="./images/undraw_appreciation_uxok.svg" class="presentation-image" alt="first-section-image/heart">
+                    <img src="./images/undraw_woman_ffrd.svg" class="presentation-image" alt="first-section-image/heart">
                 </figure>
             </article>
         </section>
