--- a/Index.html
+++ b/Index.html
@@ -11,7 +11,7 @@
     <!--CSS-->
     <link rel="stylesheet" href="./styles/styles.css">
     <!--Fonts-->
-    
+    <link href="https://fonts.cdnfonts.com/css/mochido" rel="stylesheet">         
 	<!--tab icon-->
 	<link rel="icon" href="./images/undraw_cat_px71.svg">
 </head>
@@ -59,7 +59,7 @@
                 <h2 class="title-section mySkills">Mis conocimientos</h2>
                 <p class="description-of-section">Estoy usando estos lenguajes y frameworks</p> 
             </section> 
-            <!--skills grid section, languages and frameworks -->
+    <!--skills grid section, languages and frameworks -->
 			  <section class="grid-container">
                 <section class="big-buttons-for-skills">
                     <article class="grid-buttons">
@@ -273,9 +273,9 @@
                 <h2 class="title-section someone">Internet</h2>
             </article>
        </section>
-        <!--projects section-->
+    <!--projects section-->
         <section id="projects-i-have-done" class="projects-box-grid">
-        <!--Projects that we r going to develop during the curse--> 
+    <!--Projects that we r going to develop during the curse--> 
             <section class="project-description-text">
                 <h2 class="title-section">Mis proyectos</h2>
                 <p class="description-of-section">Acá puedes encontrar los proyectos en que he trabajado</p> 
@@ -337,7 +337,7 @@
                             <p class="description-of-section">
                                 Acá te dejo mis redes sociales y una cajita para que puedas escribirme.
                             </p>
-                            <!--social media links for contact section-->
+    <!--social media links for contact section-->
                             <article>
                                 <ul class="contact-section-links">
                                     <li class="socialMedia icon">
@@ -366,7 +366,7 @@
                                     </li>
                                 </ul>
                             </article>
-                           <!-- social media links for contact section ends-->
+    <!-- social media links for contact section ends-->
                         </article> 
                     </section>
                     <section class="form-fields">
@@ -396,7 +396,7 @@
                             </section>
                         </section>
                         <article class="message-button">
-                           <!--form for the section contact-->
+    <!--form for the section contact-->
                             <article>                
                                 <form method="post" action="mailto:mj.garcest@gmail.com">
                                     <input type="submit" class="submit-button" value="Enviar">
