--- a/Index.html
+++ b/Index.html
@@ -8,6 +8,7 @@
     <!-- links sources -->
     <!--icons-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
+    <link href="https://fonts.cdnfonts.com/css/vanilla" rel="stylesheet">
     <!--CSS-->
     <link rel="stylesheet" href="./styles/styles.css">
     <!--Fonts-->
@@ -19,7 +20,7 @@
     <!-- Header links-->
     <header class="head">
         <section class="div-nav">
-            <nav>
+            <nav class="nav-bar">
                 <ul class="list-nav">
                     <li class="item-nav"> 
                         <a href="#about" class="linked">HOLA</a>
@@ -49,7 +50,7 @@
                     <a href="#projects" class="what-i-do">LO QUE HAGO</a>
                 </article> 
                 <figure class="presentation-image">
-                    <img src="./images/png-clipart-mojo-jojo-professor-utonium-animation-television-show-animation-fictional-character-villain.png" class="presentation-image" alt="first-section-image/heart">
+                    <img src=""class="presentation-image" alt="first-section-image/heart">
                 </figure>
             </article>
         </section>
