--- a/Index.html
+++ b/Index.html
@@ -13,8 +13,8 @@
     <!--Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lakki+Reddy&display=swap" rel="stylesheet">
-	<!--tab icon-->
+    <link href="https://fonts.googleapis.com/css2?family=Galindo&family=Lakki+Reddy&family=Sofia&display=swap" rel="stylesheet">
+    <!--tab icon-->
 	<link rel="icon" href="#">
 </head>
 <body>
@@ -45,8 +45,8 @@
       <section class="profile">
           <div class="presentation-container">
             <p class="greetings">¡Hola! Soy</p>
-            <h1 class="nickname">Majo Jojo</h1>  
-            <p class="greetings-text">descripcion de perfil</p>
+            <h1 class="nickname">MaJo JoJo</h1>  
+            <p class="greetings-text">desarrolladora web <br> wavesCounter, sunshineLover and sueroBeliever!</p>
           </div>
           <div>
           </div>
