--- a/Index.html
+++ b/Index.html
@@ -13,9 +13,8 @@
     <!--Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Galindo&family=Lakki+Reddy&family=Sofia&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Galindo&family=Lakki+Reddy&family=Sofia&family=Spicy+Rice&display=swap" rel="stylesheet">
     <!--tab icon-->
-	<link rel="icon" href="#">
 </head>
 <body>
     <!-- Header links-->
@@ -46,9 +45,10 @@
           <div class="presentation-container">
             <p class="greetings">¡Hola! Soy</p>
             <h1 class="nickname">MaJo JoJo</h1>  
-            <p class="greetings-text">desarrolladora web <br> wavesCounter, sunshineLover and sueroBeliever!</p>
+            <p class="greetings-text">desarrolladoraWeb <br>wavesCounter | sunshineLover | sueroBeliever</p>
           </div>
-          <div>
+          <div class="presentation-imgage">
+            <img src="/images/pngwing.com.png" alt="mojo jojo face" class="mojo-face">
           </div>
       </section>
     <!--skills section-->
@@ -236,7 +236,6 @@
 	</main>
     <!--Footer with links-->
     <footer class="footer">
-        <section class="footer-container">
             <section class="links-footer-container">
                 <ul class="footer-list-of-items">
                     <li class="footer-items"> 
@@ -278,7 +277,6 @@
                 </ul>
             </section>
         Hecho con ❤ por Majo Jojo
-        </section>
     </footer>
 </body>
 </html>
