adding icons source

--- a/Index.html
+++ b/Index.html
@@ -8,6 +8,7 @@
     <!-- links sources -->
     <!--icons-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
+    <script src="https://kit.fontawesome.com/d3c573bd54.js" crossorigin="anonymous"></script>
     <!--CSS-->
     <link rel="stylesheet" href="/styles/styles.css">
     <!--Fonts-->
@@ -261,7 +262,7 @@
                     </li>
                     <li class="social-media-footer icon">
                         <a href="https://github.com/Im-majo-jojo" aria-label="github" class="favicon">
-                            <i class="fa-brands fa-github-alt fa-xl"></i>
+                            <i class="fa-brands fa-github-alt"></i>
                         </a>
                     </li>
                     <li class="social-media-footer icon">
