size and responsivenes adjustments

--- a/Index.html
+++ b/Index.html
@@ -16,6 +16,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Galindo&family=Lakki+Reddy&family=Sofia&family=Spicy+Rice&display=swap" rel="stylesheet">
     <!--tab icon-->
+	<link rel="icon" href="#">
 </head>
 <body>
     <!-- Header links-->
@@ -262,7 +263,7 @@
                     </li>
                     <li class="social-media-footer icon">
                         <a href="https://github.com/Im-majo-jojo" aria-label="github" class="favicon">
-                            <i class="fa-brands fa-github-alt"></i>
+                            <i class="fa-brands fa-github-alt fa-xl"></i>
                         </a>
                     </li>
                     <li class="social-media-footer icon">
@@ -277,7 +278,7 @@
                     </li>
                 </ul>
             </section>
-        Hecho con ❤ por Majo Jojo
+        <p class="done-by">Hecho con ❤ por Majo Jojo</p>
     </footer>
 </body>
 </html>
