--- a/Index.html
+++ b/Index.html
@@ -54,14 +54,14 @@
           </div>
       </section>
     <!--skills section-->
-        <section id="knowledge" class="habilities">
+      <section id="knowledge" class="habilities">
             <section class="tools-description-text">
                 <h2 class="title-section mySkills">Mis conocimientos</h2>
                 <p class="description-of-section">Estoy usando estos lenguajes y frameworks</p> 
             </section>
-        </section> 
+      </section> 
     <!--skills grid section, languages and frameworks -->
-		<section class="grid-container">
+		  <section class="grid-container">
             <section class="big-buttons-for-skills">
                 <article class="grid-buttons">
                     <i class="devicon-html5-plain colored"></i>
@@ -88,11 +88,10 @@
                     <p class="tool-name">GIT</p>
                 </article>                            
             </section>
-        </section>
+      </section>
     <!--Quote Section -->
-       <section class="quote-section">
+      <section class="quote-section">
             <article class="quote-content">
-
                 <i class="fa-solid fa-quote-right fa-5x"></i>
                 <blockquote cite="#" >
                     <p class="description-of-section">
@@ -107,7 +106,7 @@
                             width="244.000000pt" height="219.000000pt" viewBox="0 0 244.000000 219.000000"
                             preserveAspectRatio="xMidYMid meet">
                             <g transform="translate(0.000000,219.000000) scale(0.100000,-0.100000)"
-                            fill="#f5bbca" stroke="none">
+                            fill="#fcb3c7" stroke="none">
                             <path d="M565 2170 c-219 -44 -431 -237 -505 -459 -129 -387 80 -817 612
                             -1258 111 -93 391 -303 526 -397 l41 -28 148 108 c326 239 450 342 618 515
                             271 278 396 516 412 779 19 322 -184 624 -487 726 -82 28 -253 25 -338 -5 -89
@@ -120,7 +119,7 @@
                             width="244.000000pt" height="219.000000pt" viewBox="0 0 244.000000 219.000000"
                             preserveAspectRatio="xMidYMid meet">
                             <g transform="translate(0.000000,219.000000) scale(0.100000,-0.100000)"
-                            fill="#f98876" stroke="none">
+                            fill="#f3414f" stroke="none">
                             <path d="M565 2170 c-219 -44 -431 -237 -505 -459 -129 -387 80 -817 612
                             -1258 111 -93 391 -303 526 -397 l41 -28 148 108 c326 239 450 342 618 515
                             271 278 396 516 412 779 19 322 -184 624 -487 726 -82 28 -253 25 -338 -5 -89
@@ -133,7 +132,7 @@
                             width="244.000000pt" height="219.000000pt" viewBox="0 0 244.000000 219.000000"
                             preserveAspectRatio="xMidYMid meet">
                             <g transform="translate(0.000000,219.000000) scale(0.100000,-0.100000)"
-                            fill="#f82200" stroke="none">
+                            fill="#fc7a9e" stroke="none">
                             <path d="M565 2170 c-219 -44 -431 -237 -505 -459 -129 -387 80 -817 612
                             -1258 111 -93 391 -303 526 -397 l41 -28 148 108 c326 239 450 342 618 515
                             271 278 396 516 412 779 19 322 -184 624 -487 726 -82 28 -253 25 -338 -5 -89
@@ -146,7 +145,7 @@
                             width="244.000000pt" height="219.000000pt" viewBox="0 0 244.000000 219.000000"
                             preserveAspectRatio="xMidYMid meet">
                             <g transform="translate(0.000000,219.000000) scale(0.100000,-0.100000)"
-                            fill="#f5bbca" stroke="none">
+                            fill="#fcb3c7" stroke="none">
                             <path d="M565 2170 c-219 -44 -431 -237 -505 -459 -129 -387 80 -817 612
                             -1258 111 -93 391 -303 526 -397 l41 -28 148 108 c326 239 450 342 618 515
                             271 278 396 516 412 779 19 322 -184 624 -487 726 -82 28 -253 25 -338 -5 -89
@@ -159,7 +158,7 @@
                             width="244.000000pt" height="219.000000pt" viewBox="0 0 244.000000 219.000000"
                             preserveAspectRatio="xMidYMid meet">
                             <g transform="translate(0.000000,219.000000) scale(0.100000,-0.100000)"
-                            fill="#f98876" stroke="none">
+                            fill="#f3414f" stroke="none">
                             <path d="M565 2170 c-219 -44 -431 -237 -505 -459 -129 -387 80 -817 612
                             -1258 111 -93 391 -303 526 -397 l41 -28 148 108 c326 239 450 342 618 515
                             271 278 396 516 412 779 19 322 -184 624 -487 726 -82 28 -253 25 -338 -5 -89
@@ -172,7 +171,7 @@
                             width="244.000000pt" height="219.000000pt" viewBox="0 0 244.000000 219.000000"
                             preserveAspectRatio="xMidYMid meet">
                             <g transform="translate(0.000000,219.000000) scale(0.100000,-0.100000)"
-                            fill="#f82200" stroke="none">
+                            fill="#fc7a9e" stroke="none">
                             <path d="M565 2170 c-219 -44 -431 -237 -505 -459 -129 -387 80 -817 612
                             -1258 111 -93 391 -303 526 -397 l41 -28 148 108 c326 239 450 342 618 515
                             271 278 396 516 412 779 19 322 -184 624 -487 726 -82 28 -253 25 -338 -5 -89
@@ -185,7 +184,7 @@
                             width="244.000000pt" height="219.000000pt" viewBox="0 0 244.000000 219.000000"
                             preserveAspectRatio="xMidYMid meet">
                             <g transform="translate(0.000000,219.000000) scale(0.100000,-0.100000)"
-                            fill="#f5bbca" stroke="none">
+                            fill="#fcb3c7" stroke="none">
                             <path d="M565 2170 c-219 -44 -431 -237 -505 -459 -129 -387 80 -817 612
                             -1258 111 -93 391 -303 526 -397 l41 -28 148 108 c326 239 450 342 618 515
                             271 278 396 516 412 779 19 322 -184 624 -487 726 -82 28 -253 25 -338 -5 -89
@@ -198,7 +197,7 @@
                             width="244.000000pt" height="219.000000pt" viewBox="0 0 244.000000 219.000000"
                             preserveAspectRatio="xMidYMid meet">
                             <g transform="translate(0.000000,219.000000) scale(0.100000,-0.100000)"
-                            fill="#f98876" stroke="none">
+                            fill="#f3414f" stroke="none">
                             <path d="M565 2170 c-219 -44 -431 -237 -505 -459 -129 -387 80 -817 612
                             -1258 111 -93 391 -303 526 -397 l41 -28 148 108 c326 239 450 342 618 515
                             271 278 396 516 412 779 19 322 -184 624 -487 726 -82 28 -253 25 -338 -5 -89
@@ -211,7 +210,7 @@
                             width="244.000000pt" height="219.000000pt" viewBox="0 0 244.000000 219.000000"
                             preserveAspectRatio="xMidYMid meet">
                             <g transform="translate(0.000000,219.000000) scale(0.100000,-0.100000)"
-                            fill="#f82200" stroke="none">
+                            fill="#fc7a9e" stroke="none">
                             <path d="M565 2170 c-219 -44 -431 -237 -505 -459 -129 -387 80 -817 612
                             -1258 111 -93 391 -303 526 -397 l41 -28 148 108 c326 239 450 342 618 515
                             271 278 396 516 412 779 19 322 -184 624 -487 726 -82 28 -253 25 -338 -5 -89
@@ -224,7 +223,7 @@
                             width="244.000000pt" height="219.000000pt" viewBox="0 0 244.000000 219.000000"
                             preserveAspectRatio="xMidYMid meet">
                             <g transform="translate(0.000000,219.000000) scale(0.100000,-0.100000)"
-                            fill="#f5bbca" stroke="none">
+                            fill="#fcb3c7" stroke="none">
                             <path d="M565 2170 c-219 -44 -431 -237 -505 -459 -129 -387 80 -817 612
                             -1258 111 -93 391 -303 526 -397 l41 -28 148 108 c326 239 450 342 618 515
                             271 278 396 516 412 779 19 322 -184 624 -487 726 -82 28 -253 25 -338 -5 -89
@@ -237,7 +236,7 @@
                             width="244.000000pt" height="219.000000pt" viewBox="0 0 244.000000 219.000000"
                             preserveAspectRatio="xMidYMid meet">
                             <g transform="translate(0.000000,219.000000) scale(0.100000,-0.100000)"
-                            fill="#f98876" stroke="none">
+                            fill="#f3414f" stroke="none">
                             <path d="M565 2170 c-219 -44 -431 -237 -505 -459 -129 -387 80 -817 612
                             -1258 111 -93 391 -303 526 -397 l41 -28 148 108 c326 239 450 342 618 515
                             271 278 396 516 412 779 19 322 -184 624 -487 726 -82 28 -253 25 -338 -5 -89
@@ -250,7 +249,7 @@
                             width="244.000000pt" height="219.000000pt" viewBox="0 0 244.000000 219.000000"
                             preserveAspectRatio="xMidYMid meet">
                             <g transform="translate(0.000000,219.000000) scale(0.100000,-0.100000)"
-                            fill="#f82200" stroke="none">
+                            fill="#fc7a9e" stroke="none">
                             <path d="M565 2170 c-219 -44 -431 -237 -505 -459 -129 -387 80 -817 612
                             -1258 111 -93 391 -303 526 -397 l41 -28 148 108 c326 239 450 342 618 515
                             271 278 396 516 412 779 19 322 -184 624 -487 726 -82 28 -253 25 -338 -5 -89
@@ -263,7 +262,7 @@
                             width="244.000000pt" height="219.000000pt" viewBox="0 0 244.000000 219.000000"
                             preserveAspectRatio="xMidYMid meet">
                             <g transform="translate(0.000000,219.000000) scale(0.100000,-0.100000)"
-                            fill="#f5bbca" stroke="none">
+                            fill="#f3414f" stroke="none">
                             <path d="M565 2170 c-219 -44 -431 -237 -505 -459 -129 -387 80 -817 612
                             -1258 111 -93 391 -303 526 -397 l41 -28 148 108 c326 239 450 342 618 515
                             271 278 396 516 412 779 19 322 -184 624 -487 726 -82 28 -253 25 -338 -5 -89
