--- a/Index.html
+++ b/Index.html
@@ -20,8 +20,7 @@
 </head>
 <body>
     <!-- Header links-->
-    <header class="head">
-        <section class="div-nav">
+    <header class="header">
             <nav class="nav-bar">
                 <ul class="list-nav">
                     <li class="item-nav"> 
@@ -38,7 +37,6 @@
                     </li>
                 </ul>
             </nav>
-        </section>
     </header> 
     <!--starts main-->
     <main>
@@ -65,27 +63,27 @@
             <section class="big-buttons-for-skills">
                 <article class="grid-buttons">
                     <i class="devicon-html5-plain colored"></i>
-                    <p class="tool-name">HTML5</p>
+                    <p class="tool-name">html5</p>
                 </article>     
                 <article class="grid-buttons">
                     <i class="devicon-css3-plain colored"></i>
-                    <p class="tool-name">CSS 3</p>
+                    <p class="tool-name">css 3</p>
                 </article>           
                 <article class="grid-buttons">
                     <i class="devicon-sass-original colored" ></i>
-                    <p class="tool-name">Sass</p>
+                    <p class="tool-name">sass</p>
                 </article>                
                 <article class="grid-buttons">
                     <i class="devicon-javascript-plain colored" ></i>
-                    <p class="tool-name">JavaScript</p>
+                    <p class="tool-name">javascript</p>
                 </article>                
                 <article class="grid-buttons">
                     <i class="devicon-react-original colored" ></i>
-                    <p class="tool-name">React</p>
+                    <p class="tool-name">react</p>
                 </article>      
                 <article class="grid-buttons">
                     <i class="devicon-git-plain colored" ></i>
-                    <p class="tool-name">GIT</p>
+                    <p class="tool-name">git</p>
                 </article>                            
             </section>
       </section>
