--- a/Index.html
+++ b/Index.html
@@ -398,7 +398,7 @@
                         <article class="message-button">
     <!--form for the section contact-->
                             <article>                
-                                <form method="post" action="mailto:mj.garcest@gmail.com">
+                                <form method="post" action="#">
                                     <input type="submit" class="submit-button" value="Enviar">
                                 </form>
                             </article>
