--- a/Index.html
+++ b/Index.html
@@ -283,43 +283,42 @@
             <section class="projects-grid">     
                     <article class="projects-box">
                         <a href="#" target="_blank" >
-                            <img src="#" alt="cooking-portafolio">
+                            <img src="/images/undraw_woman_ffrd.svg" alt="cooking-portafolio">
                             <p class="project-title">Portafolio</p>
                         </a> 
                     </article>
                     <article class="projects-box">  
                         <a href="#" target="_blank" >
-                            <img src="#">
+                            <img src="/images/undraw_woman_ffrd.svg" alt="cooking-portafolio">
                             <p class="project-title">Generador de memes</p>
                         </a> 
                     </article>              
                     <article class="projects-box">  
                         <a href="#" target="_blank" >
-                            <img src="#" alt="healty-habitos">
-                            <p class="project-title">Match3</p>
+                            <img src="/images/undraw_woman_ffrd.svg" alt="cooking-portafolio">            <p class="project-title">Match3</p>
                         </a> 
                     </article>              
                     <article class="projects-box">  
                         <a href="#" target="_blank" >
-                            <img src="#" alt="pure-love">
+                            <img src="/images/undraw_woman_ffrd.svg" alt="cooking-portafolio">
                             <p class="project-title">Controlador de gastos</p>
                         </a> 
                     </article>
                     <article class="projects-box">  
                         <a href="#" target="_blank" >
-                            <img src="#" alt="love-in-the-air">
+                            <img src="/images/undraw_woman_ffrd.svg" alt="cooking-portafolio">
                             <p class="project-title">Administrador de reuniones</p>
                         </a> 
                     </article>
                     <article class="projects-box">  
                         <a href="#" target="_blank" >
-                            <img src="#" alt="meditacion">
+                            <img src="/images/undraw_woman_ffrd.svg" alt="cooking-portafolio">
                             <p class="project-title">Todo app</p>
                         </a>
                     </article> 
                     <article class="projects-box">  
                         <a href="#" target="_blank" >
-                            <img src="#" alt="running-wild">
+                            <img src="/images/undraw_woman_ffrd.svg" alt="cooking-portafolio">
                             <p class="project-title">Buscador de peliculas</p>
                         </a> 
                     </article>              
