--- a/Index.html
+++ b/Index.html
@@ -283,42 +283,42 @@
             <section class="projects-grid">     
                     <article class="projects-box">
                         <a href="#" target="_blank" >
-                            <img src="/images/undraw_woman_ffrd.svg" alt="cooking-portafolio">
+                            <img src="/images/90-900602_the-chemical-x-bottle-chemical-x-brand-mugs.jpeg" alt="cooking-portafolio">
                             <p class="project-title">Portafolio</p>
                         </a> 
                     </article>
                     <article class="projects-box">  
                         <a href="#" target="_blank" >
-                            <img src="/images/undraw_woman_ffrd.svg" alt="cooking-portafolio">
+                            <img src="/images/90-900602_the-chemical-x-bottle-chemical-x-brand-mugs.jpeg"
                             <p class="project-title">Generador de memes</p>
                         </a> 
                     </article>              
                     <article class="projects-box">  
                         <a href="#" target="_blank" >
-                            <img src="/images/undraw_woman_ffrd.svg" alt="cooking-portafolio">            <p class="project-title">Match3</p>
+                            <img src="/images/90-900602_the-chemical-x-bottle-chemical-x-brand-mugs.jpeg"            <p class="project-title">Match3</p>
                         </a> 
                     </article>              
                     <article class="projects-box">  
                         <a href="#" target="_blank" >
-                            <img src="/images/undraw_woman_ffrd.svg" alt="cooking-portafolio">
+                            <img src="/images/90-900602_the-chemical-x-bottle-chemical-x-brand-mugs.jpeg"
                             <p class="project-title">Controlador de gastos</p>
                         </a> 
                     </article>
                     <article class="projects-box">  
                         <a href="#" target="_blank" >
-                            <img src="/images/undraw_woman_ffrd.svg" alt="cooking-portafolio">
+                            <img src="/images/90-900602_the-chemical-x-bottle-chemical-x-brand-mugs.jpeg"
                             <p class="project-title">Administrador de reuniones</p>
                         </a> 
                     </article>
                     <article class="projects-box">  
                         <a href="#" target="_blank" >
-                            <img src="/images/undraw_woman_ffrd.svg" alt="cooking-portafolio">
+                            <img src="/images/90-900602_the-chemical-x-bottle-chemical-x-brand-mugs.jpeg"
                             <p class="project-title">Todo app</p>
                         </a>
                     </article> 
                     <article class="projects-box">  
                         <a href="#" target="_blank" >
-                            <img src="/images/undraw_woman_ffrd.svg" alt="cooking-portafolio">
+                            <img src="/images/90-900602_the-chemical-x-bottle-chemical-x-brand-mugs.jpeg"
                             <p class="project-title">Buscador de peliculas</p>
                         </a> 
                     </article>              
