grid proyects responsiveness

--- a/Index.html
+++ b/Index.html
@@ -280,48 +280,51 @@
                 <p class="description-of-section">Acá puedes encontrar los proyectos en que he trabajado</p> 
             </section>
     <!--Projects that we r going to develop during the curse--> 
-            <section class="projects-grid">     
+            <section class="projects-grid">
+                <div class="projects-container">     
                     <article class="projects-box">
-                        <a href="#" target="_blank" >
-                            <img src="/images/90-900602_the-chemical-x-bottle-chemical-x-brand-mugs.jpeg" alt="cooking-portafolio">
+                        <a class="projects-card" href="#" target="_blank" >
+                            <img class="projects-images" src="/images/90-900602_the-chemical-x-bottle-chemical-x-brand-mugs.jpeg" alt="cooking-portafolio">
                             <p class="project-title">Portafolio</p>
                         </a> 
                     </article>
                     <article class="projects-box">  
-                        <a href="#" target="_blank" >
-                            <img src="/images/90-900602_the-chemical-x-bottle-chemical-x-brand-mugs.jpeg"
+                        <a class="projects-card" href="#" target="_blank" >
+                            <img class="projects-images" src="/images/90-900602_the-chemical-x-bottle-chemical-x-brand-mugs.jpeg"
                             <p class="project-title">Generador de memes</p>
                         </a> 
                     </article>              
                     <article class="projects-box">  
-                        <a href="#" target="_blank" >
-                            <img src="/images/90-900602_the-chemical-x-bottle-chemical-x-brand-mugs.jpeg"            <p class="project-title">Match3</p>
+                        <a class="projects-card" href="#" target="_blank" >
+                            <img class="projects-images" src="/images/90-900602_the-chemical-x-bottle-chemical-x-brand-mugs.jpeg"            
+                            <p class="project-title">Match3</p>
                         </a> 
                     </article>              
                     <article class="projects-box">  
-                        <a href="#" target="_blank" >
-                            <img src="/images/90-900602_the-chemical-x-bottle-chemical-x-brand-mugs.jpeg"
+                        <a class="projects-card" href="#" target="_blank" >
+                            <img class="projects-images" src="/images/90-900602_the-chemical-x-bottle-chemical-x-brand-mugs.jpeg"
                             <p class="project-title">Controlador de gastos</p>
                         </a> 
                     </article>
                     <article class="projects-box">  
-                        <a href="#" target="_blank" >
-                            <img src="/images/90-900602_the-chemical-x-bottle-chemical-x-brand-mugs.jpeg"
+                        <a class="projects-card" href="#" target="_blank" >
+                            <img class="projects-images" src="/images/90-900602_the-chemical-x-bottle-chemical-x-brand-mugs.jpeg"
                             <p class="project-title">Administrador de reuniones</p>
                         </a> 
                     </article>
                     <article class="projects-box">  
-                        <a href="#" target="_blank" >
-                            <img src="/images/90-900602_the-chemical-x-bottle-chemical-x-brand-mugs.jpeg"
+                        <a class="projects-card" href="#" target="_blank" >
+                            <img class="projects-images" src="/images/90-900602_the-chemical-x-bottle-chemical-x-brand-mugs.jpeg"
                             <p class="project-title">Todo app</p>
                         </a>
                     </article> 
                     <article class="projects-box">  
-                        <a href="#" target="_blank" >
-                            <img src="/images/90-900602_the-chemical-x-bottle-chemical-x-brand-mugs.jpeg"
+                        <a class="projects-card" href="#" target="_blank" >
+                            <img class="projects-images" src="/images/90-900602_the-chemical-x-bottle-chemical-x-brand-mugs.jpeg"
                             <p class="project-title">Buscador de peliculas</p>
                         </a> 
-                    </article>              
+                    </article> 
+                </div>             
             </section>        
         </section>
     <!--Contact and form section -->
