--- a/Index.html
+++ b/Index.html
@@ -329,7 +329,7 @@
         </section>
     <!--Contact and form section -->
         <section id="contacts" class="contact-form">
-            <section class="contact-box-section">
+													<!--left side of contact block-->
                 <section class="columns-of-contact-section">
                     <section class="information-section">
                         <article>
@@ -337,7 +337,7 @@
                             <p class="description-of-section">
                                 Acá te dejo mis redes sociales y una cajita para que puedas escribirme.
                             </p>
-    <!--social media links for contact section-->
+    																								<!--social media links for contact section-->
                             <article>
                                 <ul class="contact-section-links">
                                     <li class="socialMedia icon">
@@ -366,11 +366,12 @@
                                     </li>
                                 </ul>
                             </article>
-    <!-- social media links for contact section ends-->
+    																								<!-- social media links for contact section ends-->
                         </article> 
                     </section>
+													<!--right side of contact block-->
                     <section class="form-fields">
-                        <article>
+                        <article class="title-field">
                             <h2 class="title-section">Escribeme</h2>
                         </article>
                         <section class="form-content">
@@ -396,16 +397,13 @@
                             </section>
                         </section>
                         <article class="message-button">
-    <!--form for the section contact-->
-                            <article>                
+    																				<!--form for the section contact-->               
                                 <form method="post" action="#">
                                     <input type="submit" class="submit-button" value="Enviar">
                                 </form>
-                            </article>
                         </article>
                     </section>
                 </section>
-            </section>
         </section>
 	</main>
     <!--Footer with links-->
