--- a/Index.html
+++ b/Index.html
@@ -329,8 +329,8 @@
         </section>
     <!--Contact and form section -->
         <section id="contacts" class="contact-form">
+									<section class="contactme-container">
 													<!--left side of contact block-->
-                <section class="columns-of-contact-section">
                     <section class="information-section">
                         <article>
                             <h2 class="title-section">Contactame</h2>
@@ -338,7 +338,7 @@
                                 Acá te dejo mis redes sociales y una cajita para que puedas escribirme.
                             </p>
     																								<!--social media links for contact section-->
-                            <article>
+                            <article class="contactme-links-field">
                                 <ul class="contact-section-links">
                                     <li class="socialMedia icon">
                                         <a href="https://twitter.com/sadpeoplequeen" aria-label="twitter" class="icon-and-list-hover">
@@ -359,9 +359,9 @@
                                         </a>
                                     </li>
                                     <li class="socialMedia icon">
-                                        <a href="mailto:mj.garcest@gmail.com" aria-label="gmail" class="icon-and-list-hover">
+                                        <a href="mailto:mj.garcest@gmail." aria-label="gmail" class="icon-and-list-hover">
                                             <i class="fa-solid fa-envelope"></i>
-                                            mj.garcest@gmail
+                                            mj.garcest@gmail.com
                                         </a>
                                     </li>
                                 </ul>
@@ -371,9 +371,7 @@
                     </section>
 													<!--right side of contact block-->
                     <section class="form-fields">
-                        <article class="title-field">
                             <h2 class="title-section">Escribeme</h2>
-                        </article>
                         <section class="form-content">
                             <section class="fields-name-and-lastname">
                                 <article class="name-field">
@@ -403,7 +401,7 @@
                                 </form>
                         </article>
                     </section>
-                </section>
+									</section>
         </section>
 	</main>
     <!--Footer with links-->
