hovers and margins

--- a/Index.html
+++ b/Index.html
@@ -360,10 +360,10 @@
                                         </a>
                                     </li>
                                     <li class="socialMedia icon">
-                                        <p>
+                                        <a href="mailto:mj.garcest"gmail.com" class="icon-and-list-hover">
                                             <i class="fa-solid fa-envelope"></i>
                                             mj.garcest@gmail.com
-                                        </p>
+                                        </a>
                                     </li>
                                 </ul>
                             </article>
