--- a/Index.html
+++ b/Index.html
@@ -41,7 +41,7 @@
     <!--starts main-->
     <main>
     <!--greetings and presentation-->
-      <section class="profile">
+      <section id="#about" class="profile">
           <div class="presentation-container">
             <p class="greetings">¡Hola! Soy</p>
             <h1 class="nickname">MaJo JoJo</h1>  
