--- a/Index.html
+++ b/Index.html
@@ -41,12 +41,12 @@
     <!--starts main-->
     <main>
     <!--greetings and presentation-->
-      <section id="#about" class="profile">
+      <section id="about" class="profile">
           <div class="presentation-container">
             <p class="greetings">¡Hola! Soy</p>
             <h1 class="nickname">MaJo JoJo</h1>  
             <p class="greetings-text">desarrolladoraWeb <br>wavesCounter | sunshineLover | sueroBeliever</p>
-												<button class="greetings-button">Lo que hago</button>
+												<a href="#projects-i-have-done"class="greetings-button">Lo que hago</a>
           </div>
           <div class="presentation-imgage">
             <img src="/images/pngwing.com.png" alt="mojo jojo face" class="mojo-face">
@@ -342,13 +342,13 @@
                             <article class="contactme-links-field">
                                 <ul class="contact-section-links">
                                     <li class="socialMedia icon">
-                                        <a href="https://twitter.com/sadpeoplequeen" aria-label="twitter" class="icon-and-list-hover">
+                                        <a href="https://twitter.com/im_majo_jojo" aria-label="twitter" class="icon-and-list-hover">
                                             <i class="fa-brands fa-twitter"></i>
-                                            @sadpeoplequeen 
+                                            @im_majo_jojo 
                                         </a>
                                     </li>
                                     <li class="socialMedia icon">
-                                        <a href="https://github.com/95majojojo" aria-label="github" class="icon-and-list-hover">
+                                        <a href="https://github.com/Im-majo-jojo" aria-label="github" class="icon-and-list-hover">
                                             <i class="fa-brands fa-github-alt"></i>
                                             Michi Dev
                                         </a>
@@ -435,7 +435,7 @@
             <section class="footer-icons-container">
                 <ul class="list-for-footer-icons">
                     <li class="social-media-footer icon">
-                        <a href="https://twitter.com/sadpeoplequeen" aria-label="twitter" class="favicon">
+                        <a href="https://twitter.com/im_majo_jojo" aria-label="twitter" class="favicon">
                             <i class="fa-brands fa-twitter fa-xl"></i>  
                         </a>
                     </li>
