--- a/index.html
+++ b/index.html
@@ -285,43 +285,43 @@
                 <div class="projects-container">     
                     <article class="projects-box">
                         <a class="projects-card" href="#" target="_blank" >
-                            <img class="projects-images" src="/images/90-900602_the-chemical-x-bottle-chemical-x-brand-mugs.jpeg" alt="cooking-portafolio">
+                            <img class="projects-images" src="images/chemicalx_adobe_express.svg" alt="cooking-portafolio">
                             <p class="project-title">Portafolio</p>
                         </a> 
                     </article>
                     <article class="projects-box">  
                         <a class="projects-card" href="#" target="_blank" >
-                            <img class="projects-images" src="/images/90-900602_the-chemical-x-bottle-chemical-x-brand-mugs.jpeg"
+                            <img class="projects-images" src="images/chemicalx_adobe_express.svg" alt="cooking-portafolio">
                             <p class="project-title">Generador de memes</p>
                         </a> 
                     </article>              
                     <article class="projects-box">  
                         <a class="projects-card" href="#" target="_blank" >
-                            <img class="projects-images" src="/images/90-900602_the-chemical-x-bottle-chemical-x-brand-mugs.jpeg"            
+                            <img class="projects-images" src="images/chemicalx_adobe_express.svg" alt="cooking-portafolio">           
                             <p class="project-title">Match3</p>
                         </a> 
                     </article>              
                     <article class="projects-box">  
                         <a class="projects-card" href="#" target="_blank" >
-                            <img class="projects-images" src="/images/90-900602_the-chemical-x-bottle-chemical-x-brand-mugs.jpeg"
+                            <img class="projects-images" src="images/chemicalx_adobe_express.svg" alt="cooking-portafolio">
                             <p class="project-title">Controlador de gastos</p>
                         </a> 
                     </article>
                     <article class="projects-box">  
                         <a class="projects-card" href="#" target="_blank" >
-                            <img class="projects-images" src="/images/90-900602_the-chemical-x-bottle-chemical-x-brand-mugs.jpeg"
+                            <img class="projects-images" src="images/chemicalx_adobe_express.svg" alt="cooking-portafolio">
                             <p class="project-title">Administrador de reuniones</p>
                         </a> 
                     </article>
                     <article class="projects-box">  
                         <a class="projects-card" href="#" target="_blank" >
-                            <img class="projects-images" src="/images/90-900602_the-chemical-x-bottle-chemical-x-brand-mugs.jpeg"
+                            <img class="projects-images" src="images/chemicalx_adobe_express.svg" alt="cooking-portafolio">
                             <p class="project-title">Todo app</p>
                         </a>
                     </article> 
                     <article class="projects-box">  
-                        <a class="projects-card" href="#" target="_blank" >
-                            <img class="projects-images" src="/images/90-900602_the-chemical-x-bottle-chemical-x-brand-mugs.jpeg"
+                        <a class="projects-card" href="#" target="_blank">
+                            <img class="projects-images" src="images/chemicalx_adobe_express.svg" alt="cooking-portafolio">
                             <p class="project-title">Buscador de peliculas</p>
                         </a> 
                     </article> 
