mojo face image

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 												<a href="#projects-i-have-done"class="greetings-button">Lo que hago</a>
           </div>
           <div class="presentation-imgage">
-            <img src="/images/pngwing.com.png" alt="mojo jojo face" class="mojo-face">
+            <img src="images/mojoface.png" alt="mojo jojo face" class="mojo-face">
           </div>
       </section>
     <!--skills section-->
